# commol

./: .gitignore  .pre-commit-config.yaml  404.html  AUTHORS  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  sitemap.xml  versions.json
.github/: CODEOWNERS  dependabot.yaml
.github/actions/set-version/: action.yml
.github/workflows/: build.yaml  code-quality.yaml  docs.yaml  release.yaml
about/changelog/: index.html
about/license/: index.html
advanced/model-structure/: index.html
api/constants/: index.html
api/model-builder/: index.html
api/simulation/: index.html
crates/commol-calibration/: Cargo.toml
crates/commol-calibration/src/: calibration_problem.rs  lib.rs  optimization.rs  types.rs
crates/commol-calibration/src/probabilistic/: deduplication.rs  mod.rs
crates/commol-calibration/src/probabilistic/clustering/: mod.rs  representatives.rs
crates/commol-calibration/src/probabilistic/clustering/methods/: crowding.rs  maximin.rs  mod.rs
crates/commol-calibration/src/probabilistic/ensemble/: mod.rs  problem.rs  selection.rs
crates/commol-core/src/: lib.rs  simulation_engine.rs
crates/commol-difference/src/: builder.rs  helpers.rs  simulation.rs  types.rs
crates/commol-differential/: Cargo.toml
crates/epimodel-calibration/: Cargo.toml
crates/epimodel-calibration/src/: calibration_problem.rs  lib.rs  optimization.rs  types.rs
crates/epimodel-core/: Cargo.toml
crates/epimodel-core/src/: lib.rs  math_expression.rs  simulation_engine.rs
crates/epimodel-core/src/math_expression/: compiled.rs  mod.rs
crates/epimodel-core/src/math_expression/jit/: codegen.rs  libm.rs  mod.rs  parser.rs  tests.rs
crates/epimodel-core/src/types/: mod.rs  population.rs
crates/epimodel-difference/: Cargo.toml
crates/epimodel-difference/src/: builder.rs  helpers.rs  lib.rs  simulation.rs  types.rs
crates/epimodel-differential/: Cargo.toml
crates/epimodel-differential/src/: lib.rs
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/about/changelog/: index.html
dev/about/license/: index.html
dev/advanced/model-structure/: index.html
dev/api/calibrator/: index.html
dev/api/constants/: index.html
dev/api/model-builder/: index.html
dev/api/probabilistic-calibrator/: index.html
dev/api/simulation/: index.html
dev/development/contributing/: index.html
dev/development/release/: index.html
dev/development/workflow/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/building-models/: index.html
dev/guide/calibration/: index.html
dev/guide/core-concepts/: index.html
dev/guide/examples/: index.html
dev/guide/mathematical-expressions/: index.html
dev/guide/probabilistic-calibration/: index.html
dev/guide/simulations/: index.html
dev/search/: search_index.json
development/contributing/: index.html
development/release/: index.html
development/workflow/: index.html
docs/: index.md  user_guide.md
docs/about/: changelog.md  license.md
docs/advanced/: model-structure.md
docs/api/: calibrator.md  constants.md  model-builder.md  probabilistic-calibrator.md  simulation.md
docs/development/: contributing.md  release.md  workflow.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: building-models.md  calibration.md  core-concepts.md  examples.md  mathematical-expressions.md  probabilistic-calibration.md  simulations.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/building-models/: index.html
guide/core-concepts/: index.html
guide/examples/: index.html
guide/mathematical-expressions/: index.html
guide/simulations/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/about/changelog/: index.html
latest/about/license/: index.html
latest/search/: search_index.json
py-commol/: Cargo.toml  pyproject.toml
py-commol/commol/: __init__.py  constants.py
py-commol/commol/api/: __init__.py  calibrator.py  model_builder.py  plotter.py  probabilistic_calibrator.py  simulation.py
py-commol/commol/api/probabilistic/: calibration_runner.py  ensemble_selector.py  evaluation_processor.py  statistics_calculator.py
py-commol/commol/commol_rs/: __init__.py  _commol_rs.pyi  commol_rs.pyi
py-commol/commol/context/: bin.py  calibration.py  constants.py  disease_state.py  dynamics.py  initial_conditions.py  model.py  parameter.py  population.py  probabilistic_calibration.py  visualization.py
py-commol/commol/utils/: equations.py
py-commol/src/: calibration.rs  core.rs  difference.rs  lib.rs  python_observer.rs
py-commol/tests/: test_calibrator.py  test_model.py  test_model_builder.py  test_plotter.py  test_probabilistic_calibrator.py  test_units.py
py-commol/tests/test_models_execution/test_difference_equations/: test_difference_equations_sir.py
py-commol/tests/test_transition_rate/: test_transition_rate_sir_models.py
py-epimodel/: Cargo.toml  init_venv.sh  pyproject.toml
py-epimodel/epimodel/: __init__.py  constants.py  epimodel_rs.pyi
py-epimodel/epimodel/api/: __init__.py  calibrator.py  model_builder.py  model_loader.py  simulation.py
py-epimodel/epimodel/context/: calibration.py  condition.py  disease_state.py  dynamics.py  epidemiological_model.py  initial_conditions.py  model.py  parameter.py  population.py  stratification.py  transition.py
py-epimodel/epimodel/epimodel_rs/: epimodel_rs.pyi
py-epimodel/epimodel/utils/: __init__.py  equations.py  security.py
py-epimodel/src/: calibration.rs  core.rs  difference.rs  lib.rs  python_observer.rs
py-epimodel/tests/: __init__.py  test_calibrator.py  test_model.py  test_model_builder.py  test_models_execution.py  test_simulation.py  test_units.py
py-epimodel/tests/test_models_execution/test_difference_equations/: test_difference_equations_sir.py
py-epimodel/tests/test_transition_rate/: test_transition_rate_sir_models.py  test_transition_rate_validation.py
search/: search_index.json
stable/: 404.html  index.html  sitemap.xml
stable/search/: search_index.json
(+44 files in other folders)
