[package]
name = "epimodel"
version = "0.1.0"
edition = "2024"

[lib]
name = "epimodel_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
serde_json = "1.0"
epimodel-core = { path = "../crates/epimodel-core" }
epimodel-difference = { path = "../crates/epimodel-difference" }
epimodel-calibration = { path = "../crates/epimodel-calibration" }

# Required for custom argmin observer
argmin = "0.10"
