[tool.poetry]
name = "epimodel"
version = "0.0.1"
description = "A high-performance mathematical epidemiology library in Rust and Python."
authors = [
    "Rafael J. Villanueva Micó <rjvillan@imm.upv.es>",
    "Carlos Andreu Vilarroig <caranvi1@upv.es>",
    "David Martínez Rodríguez <damarro3@upv.es>",
]
license = "MIT"
packages = [{include = "epimodel"}]

[tool.poetry.dependencies]
python = ">=3.11.0"
pydantic = ">=2.0,<3.0"
numpy = ">=2.0,<3.0"
cffi = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4,<9.0"
pytest-cov = ">=6.2,<7.0"
ruff = ">=0.12,<0.13"
mypy = ">=1.10,<2.0"
pre-commit = ">=3.8,<4.0"
maturin = ">=1.9.1,<1.10.0"

[build-system]
requires = ["maturin>=1.9.1,<1.10.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "epimodel"

[tool.pytest]
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--log-cli-level=INFO"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".zed",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "target",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
ignore_missing_imports = true
