[package]
name = "epimodel-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core data structures for epidemiological models"

[lib]
name = "epimodel_core"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["dep:pyo3", "pyo3/serde"]
