[package]
name = "epimodel-difference"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Mathematical epidemiology modelling with difference equations"

[lib]
name = "epimodel_difference"
crate-type = ["rlib"]

[dependencies]
epimodel-core = { path = "../epimodel-core" }
pyo3 = { workspace = true, optional = true }
evalexpr = "11.0"

[features]
default = []
python = ["dep:pyo3", "epimodel-core/python"]
