[package]
name = "epimodel-difference"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Mathematical epidemiology modelling with difference equations"

[lib]
name = "epimodel_difference"
crate-type = ["rlib"]

[dependencies]
epimodel-core = { path = "../epimodel-core" }
evalexpr = "11.0"
