[package]
name = "epimodel-differential"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Mathematical epidemiology modelling with differential equations"

[dependencies]
epimodel-core = { path = "../epimodel-core" }
